chat fixed z-index

--- a/src/sass/Chat.scss
+++ b/src/sass/Chat.scss
@@ -14,7 +14,7 @@ body {
     display: flex;
     align-items: end;
     position: fixed;
-    z-index: 1;
+    z-index: 999;
     bottom: 0;
     right: 0.1em;
 
@@ -29,7 +29,6 @@ body {
 
   .chat-window {
     width: 300px;
-    height: 420px;
     display: block;
     padding: 0 1em 0 2em;
     color: #fff;
